--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,9 @@ if(x86)
     add_library(frozen OBJECT src/msmodel/frozen.c)
     set_target_properties(frozen PROPERTIES COMPILE_FLAGS "-I src/nad/ -I src/msmodel/ -I src/mod/")
 
+    add_library(dualho OBJECT src/msmodel/dualho.c)
+    set_target_properties(dualho PROPERTIES COMPILE_FLAGS "-I src/nad/ -I src/msmodel/ -I src/mod/")
+
     add_library(msmodel OBJECT src/msmodel/msmodel.c)
     set_target_properties(msmodel PROPERTIES COMPILE_FLAGS "-I src/nad/ -I src/msmodel/ -I src/mod/")
 
@@ -104,7 +107,7 @@ if(x86)
                         $<TARGET_OBJECTS:msmodelio> $<TARGET_OBJECTS:sbm> $<TARGET_OBJECTS:morse3> $<TARGET_OBJECTS:sem> $<TARGET_OBJECTS:fmo> 
                         $<TARGET_OBJECTS:sf> $<TARGET_OBJECTS:aic> $<TARGET_OBJECTS:lvcm> $<TARGET_OBJECTS:pyrazine> $<TARGET_OBJECTS:crco5>
                         $<TARGET_OBJECTS:semdp> $<TARGET_OBJECTS:fmodp> $<TARGET_OBJECTS:tully> $<TARGET_OBJECTS:rubrene> $<TARGET_OBJECTS:dnalvcm> 
-                        $<TARGET_OBJECTS:frozen> $<TARGET_OBJECTS:msmodel> 
+                        $<TARGET_OBJECTS:frozen>  $<TARGET_OBJECTS:dualho> $<TARGET_OBJECTS:msmodel> 
                         $<TARGET_OBJECTS:def> $<TARGET_OBJECTS:run_slave> $<TARGET_OBJECTS:def_host> $<TARGET_OBJECTS:nad>)
 
     # 链接库
@@ -193,6 +196,9 @@ elseif(sunway)
     add_library(frozen OBJECT src/msmodel/frozen.c)
     set_target_properties(frozen PROPERTIES COMPILE_FLAGS "-mslave -I src/nad/ -I src/msmodel/ -I src/mod/")
 
+    add_library(dualho OBJECT src/msmodel/dualho.c)
+    set_target_properties(dualho PROPERTIES COMPILE_FLAGS "-mslave -I src/nad/ -I src/msmodel/ -I src/mod/")
+
     add_library(msmodel OBJECT src/msmodel/msmodel.c)
     set_target_properties(msmodel PROPERTIES COMPILE_FLAGS "-mslave -I src/nad/ -I src/msmodel/ -I src/mod/")
 
@@ -215,7 +221,7 @@ elseif(sunway)
                         $<TARGET_OBJECTS:msmodelio> $<TARGET_OBJECTS:sbm> $<TARGET_OBJECTS:morse3> $<TARGET_OBJECTS:sem> $<TARGET_OBJECTS:fmo> 
                         $<TARGET_OBJECTS:sf> $<TARGET_OBJECTS:aic> $<TARGET_OBJECTS:lvcm> $<TARGET_OBJECTS:pyrazine> $<TARGET_OBJECTS:crco5> 
                         $<TARGET_OBJECTS:semdp> $<TARGET_OBJECTS:fmodp> $<TARGET_OBJECTS:tully> $<TARGET_OBJECTS:rubrene> $<TARGET_OBJECTS:dnalvcm> 
-                        $<TARGET_OBJECTS:frozen> $<TARGET_OBJECTS:msmodel> 
+                        $<TARGET_OBJECTS:frozen> $<TARGET_OBJECTS:dualho> $<TARGET_OBJECTS:msmodel> 
                         $<TARGET_OBJECTS:def> $<TARGET_OBJECTS:run_slave> $<TARGET_OBJECTS:def_host> $<TARGET_OBJECTS:nad>)
 
     # 链接库
