--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,9 @@ if(x86)
     add_library(retinal OBJECT src/msmodel/retinal.c)
     set_target_properties(retinal PROPERTIES COMPILE_FLAGS "-I src/nad/ -I src/msmodel/ -I src/mod/")
 
+    add_library(aso OBJECT src/msmodel/aso.c)
+    set_target_properties(aso PROPERTIES COMPILE_FLAGS "-I src/nad/ -I src/msmodel/ -I src/mod/")
+
     add_library(msmodel OBJECT src/msmodel/msmodel.c)
     set_target_properties(msmodel PROPERTIES COMPILE_FLAGS "-I src/nad/ -I src/msmodel/ -I src/mod/")
 
@@ -116,7 +119,7 @@ if(x86)
                         $<TARGET_OBJECTS:msmodelio> $<TARGET_OBJECTS:sbm> $<TARGET_OBJECTS:morse3> $<TARGET_OBJECTS:morse2> $<TARGET_OBJECTS:sem> $<TARGET_OBJECTS:fmo> 
                         $<TARGET_OBJECTS:sf> $<TARGET_OBJECTS:aic> $<TARGET_OBJECTS:lvcm> $<TARGET_OBJECTS:pyrazine> $<TARGET_OBJECTS:crco5>
                         $<TARGET_OBJECTS:semdp> $<TARGET_OBJECTS:fmodp> $<TARGET_OBJECTS:tully> $<TARGET_OBJECTS:rubrene> $<TARGET_OBJECTS:dnalvcm> 
-                        $<TARGET_OBJECTS:frozen>  $<TARGET_OBJECTS:dualho>   $<TARGET_OBJECTS:bpy> $<TARGET_OBJECTS:retinal> $<TARGET_OBJECTS:msmodel> 
+                        $<TARGET_OBJECTS:frozen>  $<TARGET_OBJECTS:dualho>   $<TARGET_OBJECTS:bpy> $<TARGET_OBJECTS:retinal> $<TARGET_OBJECTS:aso> $<TARGET_OBJECTS:msmodel> 
                         $<TARGET_OBJECTS:def> $<TARGET_OBJECTS:run_slave> $<TARGET_OBJECTS:def_host> $<TARGET_OBJECTS:nad>)
 
     # 链接库
@@ -219,6 +222,9 @@ elseif(sunway)
     add_library(retinal OBJECT src/msmodel/retinal.c)
     set_target_properties(retinal PROPERTIES COMPILE_FLAGS "-mslave -I src/nad/ -I src/msmodel/ -I src/mod/")
 
+    add_library(aso OBJECT src/msmodel/aso.c)
+    set_target_properties(aso PROPERTIES COMPILE_FLAGS "-mslave -I src/nad/ -I src/msmodel/ -I src/mod/")
+
     add_library(msmodel OBJECT src/msmodel/msmodel.c)
     set_target_properties(msmodel PROPERTIES COMPILE_FLAGS "-mslave -I src/nad/ -I src/msmodel/ -I src/mod/")
 
@@ -241,7 +247,7 @@ elseif(sunway)
                         $<TARGET_OBJECTS:msmodelio> $<TARGET_OBJECTS:sbm> $<TARGET_OBJECTS:morse3> $<TARGET_OBJECTS:morse2> $<TARGET_OBJECTS:sem> $<TARGET_OBJECTS:fmo> 
                         $<TARGET_OBJECTS:sf> $<TARGET_OBJECTS:aic> $<TARGET_OBJECTS:lvcm> $<TARGET_OBJECTS:pyrazine> $<TARGET_OBJECTS:crco5> 
                         $<TARGET_OBJECTS:semdp> $<TARGET_OBJECTS:fmodp> $<TARGET_OBJECTS:tully> $<TARGET_OBJECTS:rubrene> $<TARGET_OBJECTS:dnalvcm> 
-                        $<TARGET_OBJECTS:frozen> $<TARGET_OBJECTS:dualho>  $<TARGET_OBJECTS:bpy> $<TARGET_OBJECTS:retinal> $<TARGET_OBJECTS:msmodel> 
+                        $<TARGET_OBJECTS:frozen> $<TARGET_OBJECTS:dualho>  $<TARGET_OBJECTS:bpy> $<TARGET_OBJECTS:retinal> $<TARGET_OBJECTS:aso> $<TARGET_OBJECTS:msmodel> 
                         $<TARGET_OBJECTS:def> $<TARGET_OBJECTS:run_slave> $<TARGET_OBJECTS:def_host> $<TARGET_OBJECTS:nad>)
 
     # 链接库
